# QuantitativeTradingToolsforStockFunds

./: .env.example  .gitattributes  .gitignore  AGENTS.md  MANIFEST.sha256  PLANS.md  README.md  TASKS.md  package-lock.json  package.json  pyproject.toml  start_electron.bat  start_gui.bat
.github/workflows/: ci.yml
docs/: CHANGELOG_2026-07-11.md  CHANGELOG_2026-07-12.md  CHANGELOG_2026-07-13.md  CHANGELOG_2026-07-14.md  CHANGELOG_2026-07-17.md  CHANGELOG_2026-07-20.md  CHANGELOG_2026-07-24.md  DECISIONS.md  GLOSSARY.md  PROJECT_STATUS_2026-07-02.md  PROJECT_STATUS_2026-07-14.md  PROJECT_STATUS_2026-07-17.md  PROJECT_STATUS_2026-07-20.md  TRACEABILITY.md  index.md
docs/architecture/: ARCHITECTURE.md
docs/design/: BACKTEST_SPEC.md  CACHE_AND_ELECTRON_TRANSITION.md  DATA_CONTRACTS.md  STRATEGY_MODEL_SPEC.md
docs/domain/: FINANCIAL_THEORY.md  MARKET_RULES.md
docs/product-specs/: GUI_SPEC.md  PRODUCT_SPEC.md
docs/quality/: ACCEPTANCE_CRITERIA.md  DEFINITION_OF_DONE.md  TEST_MATRIX.md
docs/release/: RELEASE_CHECKLIST.md
docs/research/: ETF_CAPACITY_IMPACT_VALIDATION_2026-07-20.md  ETF_ROTATION_DECISION_INTEGRATION_2026-07-17.md  FORECAST_HORIZON_VALIDATION_2026-07-24.md  FORECAST_INTERVAL_VALIDATION_V2_2026-07-17.md  SHORT_TERM_STRATEGY_ASSET_CLASS_GATE_2026-07-14.md  SHORT_TERM_STRATEGY_V11_DUAL_HORIZON_CANDIDATE_2026-07-20.md  SHORT_TERM_STRATEGY_V12_SKIP_MONTH_CANDIDATE_2026-07-20.md  SHORT_TERM_STRATEGY_V12_SKIP_MONTH_PREREGISTRATION_2026-07-20.md  SHORT_TERM_STRATEGY_V13_INVERSE_VARIANCE_CANDIDATE_2026-07-20.md  SHORT_TERM_STRATEGY_V13_INVERSE_VARIANCE_PREREGISTRATION_2026-07-20.md  SHORT_TERM_STRATEGY_V13_SHADOW_EPISODE_PREREGISTRATION_2026-07-20.md  (+10 more)
electron/: index.html  main.cjs  preload.cjs  renderer.js  style.css
frontend/: index.html  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
packaging/: china_quant_platform.spec
spec/: requirements.yaml
tests/: conftest.py
(+172 files in other folders)
