[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "china-quant-platform"
version = "0.1.0"
description = "A reproducible Python foundation for a China stock and fund quant analysis desktop app."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "China Quant Platform Contributors" }]
dependencies = [
    "PySide6>=6.7,<7",
    "pyarrow>=17,<23",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
    "fastapi>=0.115,<1",
    "redis>=5,<6",
    "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
china-quant-platform = "china_quant_platform.__main__:main"
china-quant-ai-hedge-fund = "china_quant_platform.ai_hedge_fund:main"

[dependency-groups]
dev = [
    "hatchling>=1.26",
    "httpx>=0.27,<1",
    "jsonschema>=4.23,<5",
    "mypy>=1.13,<2",
    "pyinstaller>=6,<7",
    "pytest>=8.3,<9",
    "pytest-qt>=4.4,<5",
    "pyyaml>=6.0,<7",
    "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/china_quant_platform"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/spec",
    "/README.md",
    "/AGENTS.md",
    "/TASKS.md",
    "/PLANS.md",
]

[tool.pytest.ini_options]
addopts = "-ra --basetemp=.pytest-tmp"
testpaths = ["tests"]
qt_api = "pyside6"
cache_dir = ".pytest-cache"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["PySide6.*", "jsonschema.*", "pyarrow.*", "yaml"]
ignore_missing_imports = true
